--- a/css/button.css
+++ b/css/button.css
@@ -673,23 +673,24 @@ input[type="radio"]:checked + label:after {
 
 .btn-leaderboard { 
     align-items: center;
-    margin-left: 8%;
-    margin-right: 8%;
+    margin-left: 3%;
+    margin-right: 3%;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin-top:5px;
+    margin-top:15px;
     border-radius: 5px;
     transition: all .3s;
     border: solid #fff 1px;
-    padding: 10px 25px;
+    padding: 12px 25px;
     background-color: #e6ecf8;
-    color: #0056ff;
-    font-size: 13px;
+    color: #002d63;
+    font-size: 12px;
     cursor: default;
+    font-weight: 600;
     /*min-width:140px !important;*/
     letter-spacing: 2px;
-
+    margin-bottom: 20px;
 }
 
 
