--- a/css/vdo.css
+++ b/css/vdo.css
@@ -327,3 +327,12 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%); 
 }
+.icon-left {
+  width:35%;float: left; height: 76px;
+}
+.icon-right {
+  width:65%;float: left;height: 76px;text-align: left; color:#0056ff; font-weight: 600;
+}
+.icon-text {
+  font-size: 11px; font-weight: 400; color:#002d63; line-height: 1.3; 
+}
