--- a/css/vdo.css
+++ b/css/vdo.css
@@ -336,3 +336,12 @@ h1, h2, h3, h4, h5, h6 {
 .icon-text {
   font-size: 11px; font-weight: 400; color:#002d63; line-height: 1.3; 
 }
+.group-remark {
+  width:94%; margin:-10px auto 20px auto; font-size: 11px; text-align: left; padding:15px; background-color: #ffdddd; line-height: 1.3;
+  border-radius: 5px; color:#000;
+}
+
+.group-remark1 {
+  width:100%; margin:15px auto 20px auto; font-size: 11px; text-align: left; padding:15px; background-color: #ffdddd; line-height: 1.3;
+  border-radius: 5px; color:#000;
+}
